[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/fonts/SpaceMono-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/ui_elements/toppng.com-fuckyou-fuck-you-overlay-text-speech-icon-pixel-8-bit-speech-bubble-997x604.png" type="Texture" id=2]
[ext_resource path="res://scenes/UI/SpeechBalloon.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=2]
resource_name = "pop_out"
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0.05, 0 ), Vector2( 0.05, 0.05 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.947085 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "pop_out"
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.05, 0.05 ), Vector2( 0.05, 0 ), Vector2( 1e-05, 1e-05 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="SpeechBalloon" type="Sprite"]
scale = Vector2( 0.05, 0.05 )
z_index = 6
texture = ExtResource( 2 )
script = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
margin_left = -328.0
margin_top = -192.0
margin_right = 360.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "your mom is a hoe!"
align = 1
valign = 1
autowrap = true
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/pop_in = SubResource( 2 )
anims/pop_out = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
